[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drug-interaction-env"
version = "0.1.0"
description = "Pharmaceutical Drug Interaction Checker Environment"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "openai"
]

[project.scripts]
server = "server.app:main"
